@@ -4,13 +4,11 @@ import com.codeit.weatherfit.domain.clothes.dto.request.ClothesAttributeDefCreat
 import com.codeit.weatherfit.domain.clothes.dto.request.ClothesAttributeDefUpdateRequest;
 import com.codeit.weatherfit.domain.clothes.dto.request.ClothesCreateRequest;
 import com.codeit.weatherfit.domain.clothes.dto.request.ClothesUpdateRequest;
+import com.codeit.weatherfit.domain.clothes.dto.response.ClothesAttributeDto;
 import com.codeit.weatherfit.domain.clothes.dto.response.ClothesDto;
 import com.codeit.weatherfit.domain.clothes.dto.response.ClothesDtoCursorResponse;
 import com.codeit.weatherfit.domain.clothes.entity.*;
-import com.codeit.weatherfit.domain.clothes.exception.ClothesAttributeTypeNotFoundException;
-import com.codeit.weatherfit.domain.clothes.exception.ClothesAttributeValueMissingException;
-import com.codeit.weatherfit.domain.clothes.exception.ClothesNotFoundException;
-import com.codeit.weatherfit.domain.clothes.exception.InvalidClothesAttributeOptionException;
+import com.codeit.weatherfit.domain.clothes.exception.*;
 import com.codeit.weatherfit.domain.clothes.repository.ClothesAttributeRepository;
 import com.codeit.weatherfit.domain.clothes.repository.ClothesAttributeTypeRepository;
 import com.codeit.weatherfit.domain.clothes.repository.ClothesRepository;
@@ -23,6 +21,8 @@ import com.codeit.weatherfit.global.s3.event.S3ClothesPutEvent;
 import com.codeit.weatherfit.global.s3.exception.S3UploadException;
 import com.codeit.weatherfit.global.s3.util.S3KeyGenerator;
 import lombok.RequiredArgsConstructor;
+import org.jsoup.Jsoup;
+import org.jsoup.nodes.Document;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -33,7 +33,9 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.time.Instant;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 
 @Service
@@ -50,48 +52,75 @@ public class ClothesServiceImpl implements ClothesService {
     @Override
     @Transactional
     public ClothesDto create(ClothesCreateRequest request, MultipartFile image) {
-        User owner = userRepository.findById(request.ownerId())
-                .orElseThrow(() -> new RuntimeException("유저를 찾을 수 없습니다.")); // 나중에 커스텀 예외 처리
+        UUID ownerId = request.ownerId();
+        String name = request.name();
 
-        Clothes clothes = Clothes.create(
-                owner,
-                request.name(),
-                request.type()
-        );
-        clothesRepository.save(clothes);
+
+        ClothesType cType = request.type();
+        User owner = userRepository.findById(ownerId)
+                .orElseThrow(() -> new RuntimeException("유저를 찾을 수 없습니다."));// 나중에 커스텀 예외 처리
+
+        String key = null;
+
+        if (image != null && !image.isEmpty()) {
+            try {
+                key = S3KeyGenerator.generateKey(image.getOriginalFilename());
+
+                s3Service.put(
+                        key,
+                        image.getContentType(),
+                        image.getBytes()
+                );
+
+            } catch (IOException e) {
+                throw new S3UploadException(image.getOriginalFilename());
+            }
+        }
+
+        Clothes clothes =
+                clothesRepository.save(Clothes.create(
+                                owner,
+                                name,
+                                cType,
+                                key
+                        )
+                );
         clothes.updateImageKey(publishImageUploadEvent(clothes.getId(), image));
 
-        if (request.attributes() != null) {
-            for (ClothesAttributeDefCreateRequest attr : request.attributes()) {
+        List<ClothesAttributeDto> attributeDtos = request.attributes();
 
-                UUID definitionId = UUID.fromString(attr.name());
+        if (attributeDtos != null) {
 
+            for (ClothesAttributeDto attributeDto : attributeDtos) {
+
+                UUID definitionId = attributeDto.definitionId();
+                String value = attributeDto.value();
                 ClothesAttributeType type =
                         clothesAttributeTypeRepository.findById(definitionId)
-                                .orElseThrow(() -> new ClothesAttributeTypeNotFoundException(ErrorCode.CLOTHES_ATTRIBUTE_TYPE_NOT_FOUND));
-
-                if (attr.selectableValues() == null || attr.selectableValues().isEmpty()) {
-                    throw new ClothesAttributeValueMissingException(ErrorCode.CLOTHES_ATTRIBUTE_VALUE_MISSING);
-                }
-
-                String value = attr.selectableValues().get(0);
+                                .orElseThrow(() -> new ClothesAttributeTypeNotFoundException(
+                                        ErrorCode.CLOTHES_ATTRIBUTE_TYPE_NOT_FOUND
+                                ));
 
                 SelectableValue selectableValue =
                         selectableValueRepository
                                 .findByClothesAttributeTypeAndOption(type, value)
-                                .orElseThrow(() -> new InvalidClothesAttributeOptionException(ErrorCode.INVALID_CLOTHES_ATTRIBUTE_OPTION));
+                                .orElseThrow(() -> new InvalidClothesAttributeOptionException(
+                                        ErrorCode.INVALID_CLOTHES_ATTRIBUTE_OPTION
+                                ));
 
                 ClothesAttribute clothesAttribute =
                         ClothesAttribute.create(clothes, selectableValue);
 
                 clothesAttributeRepository.save(clothesAttribute);
             }
+
         }
+
 
         // 조회용
         List<ClothesAttribute> attributes =
                 clothesAttributeRepository.findByClothes(clothes);
-        String url = clothes.getImageKey() == null? null : s3Service.getUrl(clothes.getImageKey());
+        String url = clothes.getImageKey() == null ? null : s3Service.getUrl(clothes.getImageKey());
 
         return ClothesDto.from(clothes, attributes, url);
     }
@@ -99,41 +128,66 @@ public class ClothesServiceImpl implements ClothesService {
     @Override
     @Transactional
     public ClothesDto update(UUID clothesId, ClothesUpdateRequest request, MultipartFile image) {
+
         Clothes clothes = clothesRepository.findById(clothesId)
                 .orElseThrow(() -> new ClothesNotFoundException(ErrorCode.CLOTHES_NOT_FOUND));
+        String key = clothes.getImageKey();
+
+        if (image != null && !image.isEmpty()) {
+            try {
+                key = S3KeyGenerator.generateKey(image.getOriginalFilename());
+
+                s3Service.put(
+                        key,
+                        image.getContentType(),
+                        image.getBytes()
+                );
+
+            } catch (IOException e) {
+                throw new S3UploadException(image.getOriginalFilename());
+            }
+        }
+
+        String name = request.name();
+        ClothesType type = request.type();
 
         clothes.update(
-                request.name(),
-                request.type(),
-                image != null? publishImageUploadEvent(clothes.getId(), image) : clothes.getImageKey()
+                name != null ? name : clothes.getName(),
+                type != null ? type : clothes.getType(),
+                key
         );
 
-        for (ClothesAttributeDefUpdateRequest attr : request.attributes()) {
-            UUID definitionId = UUID.fromString(attr.name());
-            ClothesAttributeType type = clothesAttributeTypeRepository.findById(definitionId)
-                    .orElseThrow(() -> new ClothesAttributeTypeNotFoundException(ErrorCode.CLOTHES_ATTRIBUTE_TYPE_NOT_FOUND));
-            if (attr.selectableValues() == null || attr.selectableValues().size() != 1) {
-                throw new InvalidClothesAttributeOptionException(ErrorCode.INVALID_CLOTHES_ATTRIBUTE_OPTION);
+        List<ClothesAttributeDto> attributeDtos = request.attributes();
+
+        if (attributeDtos != null) {
+            clothesAttributeRepository.deleteByClothes(clothes);
+
+            for (ClothesAttributeDto attributeDto : attributeDtos) {
+
+                UUID definitionId = attributeDto.definitionId();
+                String value = attributeDto.value();
+                ClothesAttributeType typeEntity =
+                        clothesAttributeTypeRepository.findById(definitionId)
+                                .orElseThrow(() -> new ClothesAttributeTypeNotFoundException(
+                                        ErrorCode.CLOTHES_ATTRIBUTE_TYPE_NOT_FOUND
+                                ));
+
+                SelectableValue selectableValue =
+                        selectableValueRepository
+                                .findByClothesAttributeTypeAndOption(typeEntity, value)
+                                .orElseThrow(() -> new InvalidClothesAttributeOptionException(
+                                        ErrorCode.INVALID_CLOTHES_ATTRIBUTE_OPTION
+                                ));
+                ClothesAttribute newAttr =
+                        ClothesAttribute.create(clothes, selectableValue);
+                clothesAttributeRepository.save(newAttr);
             }
-
-            String value = attr.selectableValues().get(0);
-
-            SelectableValue selectableValue =
-                    selectableValueRepository
-                            .findByClothesAttributeTypeAndOption(type, value)
-                            .orElseThrow(() -> new InvalidClothesAttributeOptionException(ErrorCode.INVALID_CLOTHES_ATTRIBUTE_OPTION));
-
-            ClothesAttribute attribute =
-                    clothesAttributeRepository
-                            .findByClothesAndOption_ClothesAttributeType(clothes, type)
-                            .orElseThrow(() -> new ClothesAttributeTypeNotFoundException(ErrorCode.CLOTHES_ATTRIBUTE_TYPE_NOT_FOUND));
-
-            attribute.changeOption(selectableValue);
         }
 
         List<ClothesAttribute> attributes =
                 clothesAttributeRepository.findByClothes(clothes);
-        String url = clothes.getImageKey() == null? null : s3Service.getUrl(clothes.getImageKey());
+
+        String url = clothes.getImageKey() == null ? null : s3Service.getUrl(clothes.getImageKey());
 
         return ClothesDto.from(clothes, attributes, url);
     }
@@ -150,26 +204,23 @@ public class ClothesServiceImpl implements ClothesService {
 
     @Override
     @Transactional(readOnly = true)
-    public ClothesDtoCursorResponse search(UUID ownerId, String cursor, UUID idAfter, ClothesType type, int size) {
+    public ClothesDtoCursorResponse search(
+            UUID ownerId,
+            String cursor,
+            UUID idAfter,
+            ClothesType type,
+            int size
+    ) {
 
-        Pageable pageable = PageRequest.of(0, size + 1);
+        Instant cursorTime = cursor != null ? Instant.parse(cursor) : null;
 
-        List<Clothes> clothesList;
-
-        if (cursor == null) {
-            clothesList = clothesRepository
-                    .findByOwner_IdOrderByCreatedAtDescIdDesc(ownerId, pageable);
-        } else {
-            Instant cursorTime = Instant.parse(cursor);
-
-            clothesList = clothesRepository.search(
-                    ownerId,
-                    cursorTime,
-                    idAfter,
-                    type,
-                    size
-            );
-        }
+        List<Clothes> clothesList = clothesRepository.search(
+                ownerId,
+                cursorTime,
+                idAfter,
+                type,
+                size
+        );
 
         boolean hasNext = clothesList.size() > size;
 
@@ -181,17 +232,21 @@ public class ClothesServiceImpl implements ClothesService {
                 .map(clothes -> {
                     List<ClothesAttribute> attributes =
                             clothesAttributeRepository.findByClothes(clothes);
-                    String url = clothes.getImageKey() == null? null : s3Service.getUrl(clothes.getImageKey());
+
+                    String url = clothes.getImageKey() == null
+                            ? null
+                            : s3Service.getUrl(clothes.getImageKey());
+
                     return ClothesDto.from(clothes, attributes, url);
                 })
                 .toList();
 
-        Clothes last = page.isEmpty() ? null : page.getLast();
+        Clothes last = page.isEmpty() ? null : page.get(page.size() - 1);
 
         String nextCursor = last != null ? last.getCreatedAt().toString() : null;
         UUID nextIdAfter = last != null ? last.getId() : null;
 
-        int totalCount = (int) clothesRepository.countByOwner_Id(ownerId);
+        int totalCount = (int) clothesRepository.count(ownerId, type);
 
         return new ClothesDtoCursorResponse(
                 data,
@@ -223,5 +278,39 @@ public class ClothesServiceImpl implements ClothesService {
             }
         }
         return key;
+    }
+
+    @Override
+    public ClothesDto extractionFromUrl(String url, UUID ownerId) {
+
+        try {
+            Document doc = Jsoup.connect(url)
+                    .userAgent("Mozilla/5.0")
+                    .header("Accept-Language", "ko-KR,ko;q=0.9")
+                    .header("Referer", "https://www.google.com")
+                    .timeout(5000)
+                    .get();
+
+            String name = doc.select("meta[property=og:title]").attr("content");
+            if (name.isEmpty()) {
+                name = doc.title();
+            }
+
+            String imageUrl = doc.select("meta[property=og:image]").attr("content");
+
+            User owner = userRepository.findById(ownerId)
+                    .orElseThrow(() -> new RuntimeException("유저 없음")); // 커스텀
+
+            Clothes temp = Clothes.create(
+                    owner,
+                    name,
+                    null
+            );
+
+            return ClothesDto.from(temp, List.of(), imageUrl);
+
+        } catch (IOException e) {
+            throw new ClothesExtractionException(ErrorCode.URL_PARSING_FAILED);
+        }
     }
 }
